force-app/main/default/objects/Game_Roster__c/Game_Roster__c.object-meta.xml
<CustomObject>
    <label>Game Roster</label>
    <pluralLabel>Game Rosters</pluralLabel>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Game Roster Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >Track player attendance and in-game statistics for each game</description>
</CustomObject>