force-app/main/default/objects/Game_Roster__c/fields/Assists__c.field-meta.xml
<CustomField>
    <fullName>Assists__c</fullName>
    <label>Assists</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of assists by the player in this game</description>
</CustomField>