force-app/main/default/objects/Game_Roster__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <label>Attended</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether the player attended the game</description>
</CustomField>