force-app/main/default/objects/Game_Roster__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <type>Lookup</type>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Game Rosters</relationshipLabel>
    <relationshipName>Game_Rosters</relationshipName>
    <required>true</required>
    <description>The game this roster entry is associated with</description>
</CustomField>