force-app/main/default/objects/Game_Roster__c/fields/Penalties__c.field-meta.xml
<CustomField>
    <fullName>Penalties__c</fullName>
    <label>Penalties</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description
  >Number of penalties taken by the player in this game</description>
</CustomField>