force-app/main/default/objects/Game_Roster__c/fields/Penalty_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Minutes__c</fullName>
    <label>Penalty Minutes</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total penalty minutes for the player in this game</description>
</CustomField>