force-app/main/default/objects/Game_Roster__c/fields/Plus_Minus__c.field-meta.xml
<CustomField>
    <fullName>Plus_Minus__c</fullName>
    <label>Plus/Minus</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Plus/minus rating for the player in this game</description>
</CustomField>