force-app/main/default/objects/Game_Roster__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Game Rosters</relationshipLabel>
    <relationshipName>Game_Rosters</relationshipName>
    <description
  >The team member (player or staff) participating in this game</description>
</CustomField>